--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,7 @@
 quiz.earthics.org
 
+root * /home/jonathan/climate-quiz/resources/public
+
 encode zstd gzip
 file_server
 php_fastcgi /analytics.php unix//run/php/php7.4-fpm.sock
